Run IntelliJ IDEA Code Cleanup on `src` directory
This includes all but a couple of automatic cleanup suggestions, which
will be included in the next commit.